labs/observe-jaeger/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: observe-jaeger-vs
spec:
  hosts:
  - "*"
  gateways:
  - observe-jaeger-gateway
  http:
  - match:
    - uri:
        exact: /trace
    rewrite:
      uri: /
    route:
    - destination:
        host: servicea
        port:
          number: 8080
